--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "react-homework-template",
+  "name": "03-goit-react-hw-03-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://PlutovaKate.github.io/203-goit-react-hw-03-phonebook/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^6.1.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
